--- a/game.html
+++ b/game.html
@@ -11,6 +11,7 @@
 		<script src="jquery-3.2.1.min.js"></script>
 		<script src="scoreboard.js"></script>
 		<script src="core.js"></script>
+		<script src="cell.js"></script>
 	</head>
 	<body>
 		<div id="wall">
