--- a/game.html
+++ b/game.html
@@ -5,13 +5,13 @@
 		<link rel="stylesheet" href="style.css" type="text/css" ></link>
 		<script src="matrix.js"></script>
 		<script src="onload.js"></script>
-		<script src="square.js"></script>
 		<script src="snake.js"></script>
 		<script src="fruit.js"></script>
 		<script src="jquery-3.2.1.min.js"></script>
 		<script src="scoreboard.js"></script>
 		<script src="core.js"></script>
 		<script src="cell.js"></script>
+		<script src="snakeElement.js"></script>
 	</head>
 	<body>
 		<div id="wall">
